feat: edit post page

--- a/Blog.Admin/Views/Post/Create.cshtml
+++ b/Blog.Admin/Views/Post/Create.cshtml
@@ -1,7 +1,8 @@
-@model Blog.Admin.Models.CreatePostViewModel
+@model Blog.Admin.Models.PostCreateViewModel
 
 @{
     Layout = "_Layout1";
+    var modelForScript = new PostUpdateScriptDto();
 }
 
 <div class="px-4 sm:px-6 lg:px-8 mt-4 mb-4">
@@ -202,8 +203,6 @@
                             </div>
                         </div>
                     </template>
-
-
                 </div>
             </template>
         </div>
@@ -227,239 +226,7 @@
 </div>
 
 @section Scripts {
-    <script>
-@* 预渲染相关逻辑开始 *@
-const putInfoPostCoverUrl = `@(Url.RouteUrl("UploadPostCover"))`
-const putInfoPostContentImageUrl = `@(Url.RouteUrl("UploadPostContentImage"))`
-const postContentJsonSelector = "#@nameof(Model.PostContentJson)"
-@* 预渲染相关逻辑结束 *@
-
-const formatBytes = (bytes, decimals = 2) => {
-  @* https://stackoverflow.com/a/18650828 *@
-  if (!+bytes) return '0 Bytes'
-
-  const k = 1024
-  const dm = decimals < 0 ? 0 : decimals
-  const sizes = ['Bytes', 'KB', 'MB', 'GB', 'TB', 'PB', 'EB', 'ZB', 'YB']
-
-  const i = Math.floor(Math.log(bytes) / Math.log(k))
-
-  return `${parseFloat((bytes / Math.pow(k, i)).toFixed(dm))} ${sizes[i]}`
-}
-
-const uuidv4 = () => {
-  @* https://stackoverflow.com/a/2117523 *@
-  return ([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g, c =>
-    (c ^ crypto.getRandomValues(new Uint8Array(1))[0] & 15 >> c / 4).toString(16)
-  );
-}
-
-const newBlock = () => {
-  return {
-    menuOpen: false,
-    uuid: uuidv4(),
-  };
-}
-
-const newImageContent = () => {
-  return {
-    uuid: uuidv4(),
-    status: 'no-image',
-    caption: null,
-    resourceId: null,
-    isUploading: false,
-    url: null,
-    fileName: null,
-    fileSize: null,
-  };
-}
-
-const setBlockType = (block, type) => {
-  switch (type) {
-    case 'images':
-      block.paragraph = null;
-      block.images = [newImageContent()];
-      break;
-    case 'paragraph':
-      block.paragraph = ''
-      block.images = null;
-      break;
-  }
-    }
-
-const newParagraphBlock = () => {
-  const block = newBlock();
-  setBlockType(block, 'paragraph');
-  return block;
-}
-
-document.addEventListener('alpine:init', () => {
-  Alpine.data('postUpdate', () => ({
-    postContentData: {
-      cover: newImageContent(),
-      blocks: [
-        newParagraphBlock()
-      ],
-    },
-    coverUploadInputId() {
-      return 'cover-upload-input-id';
-    },
-    contentImagesUploadInputId(indexOfBlock, indexOfImage) {
-      return 'content-images-upload-input-id-' + indexOfBlock + '-' + indexOfImage;
-    },
-    coverTextareaId() {
-      return 'cover-textarea-id-'
-    },
-    contentImagesTextareaId(indexOfBlock, indexOfImage) {
-      return 'content-images-textarea-id-' + indexOfBlock + '-' + indexOfImage;
-    },
-    closeMenu(idx) {
-      const block = this.postContentData.blocks[idx]
-      if (block == null) return;
-      block.menuOpen = false;
-    },
-    async coverUploadChange(e) {
-      const cover = this.postContentData.cover;
-      cover.isUploading = true;    
-      
-      const file = e.target.files[0];
-      if (!file) return;
-      
-      const formData = new FormData();
-      formData.append("file", file);
-      
-      const resp = await fetch(putInfoPostCoverUrl, {
-        method: "POST",
-        body: formData
-      })
-      const info = await resp.json();
-       
-      cover.status = 'not-confirmed';
-      cover.resourceId = info.resourceId;
-      cover.caption = '';
-      cover.isUploading = false;
-      cover.url = info.url;
-      cover.fileName = file.name;
-      cover.fileSize = file.size;
-    },
-    async contentImagesUploadChange(e, blockIndex, imageIndex) {
-      const b = this.postContentData.blocks[blockIndex];
-      const imgs = b.images;
-      const img = imgs[imageIndex];
-      
-      const file = e.target.files[0];
-      if (!file) return;
-
-      const formData = new FormData();
-      formData.append("file", file);
-
-      const resp = await fetch(putInfoPostContentImageUrl, {
-        method: "POST",
-        body: formData
-      })
-      const info = await resp.json();
-
-      img.status = 'not-confirmed'
-      img.resourceId = info.resourceId;
-      img.caption = '';
-      img.isUploading = false;
-      img.url = info.url;
-      img.fileName = file.name;
-      img.fileSize = file.size;
-      
-      imgs.push(newImageContent());
-    },
-    deleteCover() {
-      this.cover.status = 'no-image'
-      this.cover.resourceId = null;
-      this.cover.caption = null;
-      this.cover.isUploading = false;
-      this.cover.url = null;
-      this.cover.coverFileName = null;
-      this.cover.coverFileSize = null;
-    },
-    deleteImage(indexOfBlock, indexOfImage) {
-      const b = this.postContentData.blocks[indexOfBlock];
-      const imgs = b.images;
-      imgs.splice(indexOfImage, 1);
-    },
-    addBlock(idx) {
-      this.postContentData.blocks.splice(idx, 0, newParagraphBlock());
-    },
-    addBlockAtEnd() {
-      this.postContentData.blocks.push(newParagraphBlock());
-    },
-    deleteBlock(idx) {
-      this.postContentData.blocks.splice(idx, 1);
-    },
-    turnIntoImagesBlock(idx) {
-      const b = this.postContentData.blocks[idx]
-      setBlockType(b, 'images');
-    },
-    turnIntoParagraphBlock(idx) {
-      const b = this.postContentData.blocks[idx]
-      setBlockType(b, 'paragraph');
-    },
-    dragStartHandler(event, index) {
-      event.dataTransfer.setData('text/plain', index);
-    },
-    dropHandler(event, index) {
-      const fromIndex = event.dataTransfer.getData('text/plain');
-      if (fromIndex === index) return;
-      const bs = this.postContentData.blocks;
-      const deleted = bs.splice(fromIndex, 1);
-      const padding = fromIndex < index ? -1 : 0;
-      bs.splice(index + padding,  0, deleted[0]);
-    },
-    dropOverHandler(event, index) {
-      event.preventDefault();
-      event.dataTransfer.dropEffect = 'move';
-    },
-    handleSubmit() {
-      @* 手动处理 cover 和 content *@
-      const form = document.getElementById("post-update-form");
-      const postContentJson = document.querySelector(postContentJsonSelector)
-      
-      @* 用于提交的object *@
-      const postContent = {
-        cover: {
-          resourceId: this.postContentData.cover.resourceId,
-          caption: this.postContentData.cover.caption,
-        },
-        blocks: []
-      }
-      
-      @* 过滤并处理 *@
-      for (let i = 0; i <  this.postContentData.blocks.length; i++) {
-          const b = this.postContentData.blocks[i];
-          if (b.paragraph != null) {
-            if (b.paragraph.length === 0) continue;
-            postContent.blocks.push({paragraph: b.paragraph});
-            continue;
-          }
-          if (b.images != null) {
-            if (b.images.length === 0) continue;
-            const imgs = [];
-            for (let ii = 0; ii < b.images.length; ii++) {
-              const img = b.images[ii];
-              if (img.resourceId != null && img.resourceId.length > 0) {
-                imgs.push({
-                  resourceId: img.resourceId,
-                  caption: img.caption,
-                });
-              }
-            }
-            postContent.blocks.push({images: imgs});
-            continue;
-          }
-      }
-      
-      @* 提交表单 *@
-      postContentJson.value = JSON.stringify(postContent);
-      console.log(postContentJson.value)
-      form.submit();
-    },
-  }))
-})
-    </script>
+    <partial name="_FormatBytesScript"/>
+    <partial name="_UuidScript"/>
+    <partial name="_PostUpdateScript" model="modelForScript"/>
 }
