--- a/Blog.Admin/Views/Post/Edit.cshtml
+++ b/Blog.Admin/Views/Post/Edit.cshtml
@@ -1,8 +1,236 @@
-@model Blog.Admin.Models.EditPostViewModel
+@model Blog.Admin.Models.PostEditViewModel
+
 
 @{
-    ViewBag.Title = "title";
-    Layout = "_LeveledLayout";
+    Layout = "_Layout1";
+    var modelForScript = new PostUpdateScriptDto();
+    modelForScript.InitialPostContentData = Model.PostContent;
 }
 
-<h2>title</h2>
+<div class="px-4 sm:px-6 lg:px-8 mt-4 mb-4">
+<form class="space-y-8 divide-y divide-gray-200 mt-4" method="post" x-data="postUpdate" id="post-update-form">
+<div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
+<div class="space-y-6 sm:space-y-5">
+<div>
+    <h3 class="text-lg font-medium leading-6 text-gray-900">Post Information</h3>
+    <p class="mt-1 max-w-2xl text-sm text-gray-500">Basic Info</p>
+</div>
+
+<!-- 标题 -->
+<div class="space-y-6 sm:space-y-5">
+    <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+        <label asp-for="Title" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2"></label>
+        <div class="mt-1 sm:col-span-2 sm:mt-0">
+            <input type="text" asp-for="Title" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+        </div>
+        <span asp-validation-for="Title" class="mt-2 text-sm text-red-600" id="name-error"></span>
+    </div>
+</div>
+
+<!-- 副标题 -->
+<div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+    <label asp-for="SubTitle" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Sub Title</label>
+    <div class="mt-1 sm:col-span-2 sm:mt-0">
+        <textarea id="sub-title" asp-for="SubTitle" rows="3" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"></textarea>
+    </div>
+    <span asp-validation-for="SubTitle" class="mt-2 text-sm text-red-600" id="sub-title-error"></span>
+</div>
+
+<!-- slug -->
+<div class="space-y-6 sm:space-y-5">
+    <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+        <label asp-for="Slug" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2"></label>
+        <div class="mt-1 sm:col-span-2 sm:mt-0">
+            <input type="text" asp-for="Slug" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+        </div>
+        <span asp-validation-for="Slug" class="mt-2 text-sm text-red-600" id="slug-error"></span>
+    </div>
+</div>
+
+@* 封面开始 *@
+<div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+    <label class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Cover photo</label>
+    <div class="mt-1 sm:col-span-2 sm:mt-0">
+        <div x-show="postContentData?.cover?.resourceId == null" class="cover-file-upload-area flex max-w-lg justify-center rounded-md border-2 border-dashed border-gray-300 px-6 pt-5 pb-6">
+            <div class="space-y-1 text-center">
+                <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                    <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                <div class="flex text-sm text-gray-600">
+                    <label x-bind:for="coverUploadInputId()" class="relative cursor-pointer rounded-md bg-white font-medium text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:text-indigo-500">
+                        <span>Upload a file</span>
+                        <input x-on:change="coverUploadChange($event)" x-bind:id="coverUploadInputId()" type="file" accept="image/png, image/jpeg" size="1048576" class="sr-only">
+                    </label>
+                    <p class="pl-1">or drag and drop</p>
+                </div>
+                <p class="text-xs text-gray-500">PNG, JPG, GIF up to 10MB</p>
+            </div>
+        </div>
+        <div x-show="postContentData?.cover?.resourceId != null">
+            <div class="flex gap-4 items-start">
+                <img alt="cover" x-bind:src="postContentData?.cover?.url" class="h-28 p-2 border border-gray-200 rounded-md"/>
+                <textarea asp-for="SubTitle" x-model="postContentData.cover.caption" rows="4" x-bind:id="coverTextareaId()" class="block w-56 h-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"></textarea>
+                <div class="flex flex-col gap-4">
+                    <div>
+                        <div class="flex-none font-medium text-gray-700 flex-0" x-text="postContentData.cover?.fileName"></div>
+                        <div class="flex-none text-gray-500" x-text="formatBytes(postContentData.cover?.fileSize)"></div>
+                    </div>
+                    <button x-on:click="deleteCover()" type="button" class="flex-none h-8 inline-flex items-center rounded-md border border-gray-300 bg-white px-3 py-2 text-sm font-medium leading-4 text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+@* 封面结束 *@
+
+<div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+    <label asp-for="Topic" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Topic</label>
+    <div class="mt-1 sm:col-span-2 sm:mt-0">
+        <select asp-for="Topic" asp-items="Model.DomainTopics" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+        </select>
+    </div>
+</div>
+
+<div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+    <label asp-for="Category" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Category</label>
+    <div class="mt-1 sm:col-span-2 sm:mt-0">
+        <select asp-for="Category" asp-items="Model.DomainCategories" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+        </select>
+    </div>
+</div>
+
+<div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+    <label asp-for="Language" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Language</label>
+    <div class="mt-1 sm:col-span-2 sm:mt-0">
+        <select asp-for="Language" autocomplete="country-name" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+            <option value="zh">中文</option>
+            <option value="en">English</option>
+            <option value="ja">日本語</option>
+        </select>
+    </div>
+</div>
+
+<div class="sm:grid  sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+    <template x-for="(block, index) in postContentData.blocks" x-bind:key="block.uuid">
+        <div class="flex max-w-7xl" draggable="true" x-on:dragstart.self="dragStartHandler($event, index)" x-on:drop.prevent="dropHandler($event, index)" x-on:dragover="dropOverHandler($event, index)">
+            <button x-on:click="addBlock(index)" type="button" class="w-10 h-10 opacity-10 hover:opacity-80">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15"/>
+                </svg>
+            </button>
+
+            @* 按钮开始 *@
+            <div class="relative inline-block text-left">
+                <div>
+                    <button x-on:click="block.menuOpen = !block.menuOpen" type="button" class="w-10 h-10 opacity-10 hover:opacity-80" id="menu-button" aria-expanded="true" aria-haspopup="true">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 12.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 18.75a.75.75 0 110-1.5.75.75 0 010 1.5z"/>
+                        </svg>
+                    </button>
+                </div>
+
+                <!--
+                Dropdown menu, show/hide based on menu state.
+                                                                    
+                Entering: "transition ease-out duration-100"
+                From: "transform opacity-0 scale-95"
+                To: "transform opacity-100 scale-100"
+                Leaving: "transition ease-in duration-75"
+                From: "transform opacity-100 scale-100"
+                To: "transform opacity-0 scale-95"
+                -->
+                <div
+                    x-show="block.menuOpen"
+                    x-on:click.outside="closeMenu(index)"
+                    style="display: none;"
+                    x-transition:enter="transition ease-out duration-100"
+                    x-transition:enter-start="transform opacity-0 scale-95"
+                    x-transition:enter-end="transform opacity-100 scale-100"
+                    x-transition:leave="transition ease-in duration-75"
+                    x-transition:leave-start="transform opacity-100 scale-100"
+                    x-transition:leave-end="transform opacity-0 scale-95"
+                    class="absolute right-0 z-10 mt-2 w-56 origin-top-right divide-y divide-gray-100 rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+                    <div class="py-1" role="none">
+                        <!-- Active: "bg-gray-100 text-gray-900", Not Active: "text-gray-700" -->
+                        <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0">Edit</a>
+                        <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-1">Duplicate</a>
+                    </div>
+                    <div class="py-1" role="none">
+                        <button x-on:click="turnIntoImagesBlock(index)" type="button" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-2">Turn into images</button>
+                        <button x-on:click="turnIntoParagraphBlock(index)" type="button" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-3">Turn into paragraph</button>
+                    </div>
+                    <div class="py-1" role="none">
+                        <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-4">Share</a>
+                        <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-5">Add to favorites</a>
+                    </div>
+                    <div class="py-1" role="none">
+                        <button type="button" x-on:click="deleteBlock(index)" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-6">Delete</button>
+                    </div>
+                </div>
+            </div>
+            @* 按钮结束 *@
+
+            <template x-if="block.paragraph != null">
+                <textarea x-model="block.paragraph" rows="4" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"></textarea>
+            </template>
+
+            <template x-if="block.images != null">
+                <div>
+                    <template x-for="(image, imageIndex) in block.images" x-bind:key="image.uuid">
+                        <div>
+                            <div x-show="image.resourceId != null" class="flex gap-4 items-start">
+                                <img alt="cover" x-bind:src="image.url" class="h-28 w-28 p-2 border border-gray-200 rounded-md" src=""/>
+                                <textarea x-model="image.caption" rows="4" x-bind:id="contentImagesTextareaId(index, imageIndex)" class="block w-56 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"></textarea>
+                                <div>
+                                    <div class="font-medium text-gray-700" x-text="image.fileName ?? ''"></div>
+                                    <div class="text-gray-500" x-text="formatBytes(image.fileSize ?? 0)"></div>
+
+                                    <button x-on:click="deleteImage(index, imageIndex)" type="button" class="h-8 inline-flex items-center rounded-md border border-gray-300 bg-white px-3 py-2 text-sm font-medium leading-4 text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Delete</button>
+                                </div>
+                            </div>
+                            <div x-show="image.resourceId == null" class="cover-file-upload-area flex max-w-lg justify-center rounded-md border-2 border-dashed border-gray-300 px-6 pt-5 pb-6">
+                                <div class="space-y-1 text-center">
+                                    <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                                        <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                    <div class="flex text-sm text-gray-600">
+                                        <label x-bind:for="contentImagesUploadInputId(index, imageIndex)" class="relative cursor-pointer rounded-md bg-white font-medium text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:text-indigo-500">
+                                            <span>Upload a file</span>
+                                            <input x-on:change="contentImagesUploadChange($event, index, imageIndex)" x-bind:id="contentImagesUploadInputId(index, imageIndex)" type="file" accept="image/png, image/jpeg" size="1048576" class="sr-only">
+                                        </label>
+                                        <p class="pl-1">or drag and drop</p>
+                                    </div>
+                                    <p class="text-xs text-gray-500">PNG, JPG, GIF up to 10MB</p>
+                                </div>
+                            </div>
+                        </div>
+                    </template>
+
+
+                </div>
+            </template>
+        </div>
+    </template>
+    <button x-on:click="addBlockAtEnd()" type="button" class="w-10 h-10 opacity-10 hover:opacity-80">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15"/>
+        </svg>
+    </button>
+</div>
+</div>
+</div>
+<div class="pt-5">
+    <div class="flex justify-end">
+        <button type="button" onclick="history.back()" class="rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Back</button>
+        <button type="submit" x-on:click="handleSubmit()" class="ml-3 inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Create</button>
+    </div>
+</div>
+<input type="hidden" asp-for="PostContentJson" value=""/>
+</form>
+</div>
+
+@section Scripts {
+    <partial name="_FormatBytesScript"/>
+    <partial name="_UuidScript"/>
+    <partial name="_PostUpdateScript" model="modelForScript"/>
+}
