--- a/Blog.Admin/Views/Post/Index.cshtml
+++ b/Blog.Admin/Views/Post/Index.cshtml
@@ -45,7 +45,7 @@
                 <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell">@post.isPublic</td>
                 <td class="py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
                     <a asp-action="Edit" asp-route-id="@post.Id" asp-route-domainId="@Context.GetDomainIdFromHttpContextItems()" class="text-indigo-600 hover:text-indigo-900">Edit</a>
-                    <form id="delete-post-form-@post.Id" method="POST" asp-action="DeletePost" asp-controller="Post">
+                    <form id="delete-post-form-@post.Id" method="POST" asp-action="Delete" asp-controller="Post">
                         <input type="hidden" name="@nameof(DeletePostDto.PostId)" value="@post.Id"/>
                         <input type="hidden" name="@nameof(DeletePostDto.DomainId)" value="@domainId"/>
                     </form>
