--- a/Blog.Web/Pages/_ViewImports.cshtml
+++ b/Blog.Web/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Blog.Web
 @namespace Blog.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Localisation
+@using Microsoft.Extensions.Localization;
